--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,35 @@
-# Site settings
-title: My Awesome Site
-description: >- # this means to ignore newlines until "baseurl:"
-  This is my awesome site where I blog about my adventures in coding.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-
-# Build settings
-theme: minima
+# Theme Configuration
+remote_theme: pages-themes/hacker@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
-# Minima theme settings
-minima:
-  skin: dark # Use "dark" for dark mode theme provided by Minima
 
-# Author settings
+# Site Title & Description
+title: Friday Lab
+description: Linear Relationships
+timezone: America/New_York
+lang: en-US
+
+# Color Customization (using the 'dark mode' as you previously preferred 'dark' skin)
+color_scheme: dark
+
+# Navigation Structure
+main_nav:
+  - title: "Home"
+    url: /
+  - title: "Landing Page"
+    url: https://riverdalegithub.github.io/linear_relationships_6th/
+
+# Author Information
 author:
-  name: Your Name
-  email: your-email@example.com
+  name: Lila James
+  email: ljames@riverdale.edu
 
-# Social media settings (optional)
-twitter_username: yourusername
-github_username:  yourusername
 
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list to override the default setting.
-exclude:
-  - Gemfile
-  - Gemfile.lock
-  - node_modules
-  - vendor/bundle
-  - vendor/cache
-  - vendor/gems
-  - vendor/ruby
+  
+# If you have code blocks, enable line numbers for better clarity.
+highlighter: rouge
+line_numbers: true
 
-# Plugins (if you need additional plugins)
-plugins:
-  - jekyll-seo-tag
+# Google Analytics (if your theme supports it)
+#google_analytics: UA-XXXXXXX
